--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>RYAN Trying HARD to get this code working</h1>
     <a href="rozin-mirror">Rozzin Mirror</a>
+    <a href="Text-Rain">Text Rain</a>
 </body>
 </html>
