--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <title>Ryan OH- Nooooo~~</title>
 </head>
 <body>
-    <h1>RYAN Trying HARD to get this code working</h1>
+    <h1>RYAN Trying HARD to get this code working...</h1>
+    <h3>Yeah.. Works..?</h2>
     <a href="rozin-mirror">Rozzin Mirror</a>
+    <br/>
     <a href="Text-Rain">Text Rain</a>
+    <br/>
+    <a href="analyzer">Mood analyzer</a>
 </body>
 </html>
