--- a/analyzer/index.html
+++ b/analyzer/index.html
@@ -12,7 +12,15 @@
 </head>
 
 <body>
+  <h2> <p style="color:#FF0000";>Yeah.. Works..?!</p></h2>
+  <br/>
+  <br/>
+  <br/>
+  <center><h1>"😊"</h1></center>
+  <center><body><p style="color: azure;">Smile! you're on camera</body></center>
   <script src="sketch.js"></script>
+  <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+  <center><p style="color:aqua;"><blink> 50000 Smiles a DAY!</blink></center>
 </body>
 
 </html>
