--- a/analyzer/index.html
+++ b/analyzer/index.html
@@ -19,8 +19,12 @@
   <center><h1>"😊"</h1></center>
   <center><body><p style="color: azure;">Smile! you're on camera</body></center>
   <script src="sketch.js"></script>
-  <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+  <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
   <center><p style="color:aqua;"><blink> 50000 Smiles a DAY!</blink></center>
+
+    <a target="_blank" rel="noopener noreferrer" href="https://www.verywellmind.com/top-reasons-to-smile-every-day-2223755">
+      <center><P style="color: aquamarine;">
+    <font size="+2"><u>Top 10 Reasons to Smile Every Day(<---Click)</font></center>
 </body>
 
 </html>
