--- a/analyzer_lights_on/index.html
+++ b/analyzer_lights_on/index.html
@@ -9,21 +9,22 @@
   <script src="https://cdn.jsdelivr.net/gh/ml5js/Intro-ML-Arts-IMA@ml5-build-10-7-19/ml5_build/ml5.min.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
   <meta charset="utf-8" />
-</head>
 
+</head>
 <body>
-  <h2> <p style="color:#FF0000";>Yeah.. Works..?!</p></h2>
+  <h2><p style="color:#FF0000";>Yeah.. Works..?!</p></h2>
+  <a href="analyzer_lights_off">Lights OFF</a>
   <br/>
   <br/>
   <br/>
-  <center><h1>"😊"</h1></center>
+  <center><h1>😊</h1></center>
   <center><body><p style="color: azure;">Smile! you're on camera</body></center>
   <script src="sketch.js"></script>
   <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-  <center><p style="color:aqua;"><blink> 50000 Smiles a DAY!</blink></center>
+  <center><p style="color:cornflowerblue;"><blink> 50000 Smiles a DAY!</blink></center>
 
     <a target="_blank" rel="noopener noreferrer" href="https://www.verywellmind.com/top-reasons-to-smile-every-day-2223755">
-      <center><P style="color: aquamarine;">
+      <center><P style="color: rgb(255, 127, 127);">
     <font size="+2"><u>Top 10 Reasons to Smile Every Day(<---Click)</font></center>
 </body>
 
