--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <br/>
     <a href="Text-Rain">Text Rain</a>
     <br/>
-    <a href="analyzer">Mood analyzer</a>
+    <a href="analyzer_lights_on/">Mood analyzer</a>
 </body>
 </html>
