some gif on main

--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ryan OH- Nooooo~~</title>
+<!DOCTYPE html><html lang="en"><head>
+    <script src="p5.min.js"></script>
+    <script src="p5.sound.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8">
+    <title> OH- Nooooo~~</title>
 </head>
 <body>
-    <h1>RYAN Trying HARD to get this code working...</h1>
-    <h3>Yeah.. Works..?</h2>
-    <a href="rozin-mirror">Rozzin Mirror</a>
+    
+    <h1><p style="color: aliceblue;">RYAN Trying HARD to get this code working...</h1>
+    <h3><p style="color: aliceblue;">Yeah.. Works..?</h2>
+    <a href="rozin-mirror" style="color:red;">Rozzin Mirror</a>
     <br/>
-    <a href="Text-Rain">Text Rain</a>
+    <a href="Text-Rain" style="color:red;">Text Rain</a>
     <br/>
-    <a href="analyzer_lights_on/">Mood analyzer</a>
+    <a href="analyzer_lights_on/" style="color:red;">Mood analyzer</a>
+    
 </body>
 </html>
+
