--- a/analyzer_lights_on/analyzer_lights_off/index.html
+++ b/analyzer_lights_on/analyzer_lights_off/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <h2> <p style="color:#FF0000";>Yeah.. Works..?!</p></h2>
-  <a href="/analyzer_lights_on"> Lights ON</a>
+  <a href="../analyzer_lights_on"> Lights ON</a>
   <br/>
   <br/>
   <br/>
